--- a/index.html
+++ b/index.html
@@ -1,12 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>responsive</title>
-</head>
-<body>
-  
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
+    <title>responsive</title>
+  </head>
+  <body>
+    <header class="header">
+      <div class="header-container w-container">
+        <div class="site">
+          <a href="index.html">
+            <img src="img/logo.svg" alt="Boards" width="135" height="26" />
+          </a>
+        </div>
+
+        <button class="navbtn">
+          <i class="fas fa-bars"></i>
+        </button>
+      </div>
+    </header>
+
+    <section class="hero">
+      <div class="hero-container w-container">
+        <h1>Stationery Services</h1>
+        <p>便利な道具とサービスをお届けします</p>
+        <a href="#" class="btn">無料で始める</a>
+      </div>
+    </section>
+  </body>
 </html>
